--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     
       <ul>
       <li>
-        <a href="http://127.0.0.1:5500/index.2.html" target="_blank">Sobre Mim</a>
+        <a href="https://ialeafar.github.io/Explorer2/" target="_blank">Sobre Mim</a>
       </li>
       <li>
-        <a href="http://127.0.0.1:5500/index.3.html" target="_blank">Sobre a Include Engenharia</a>
+        <a href="https://ialeafar.github.io/Explorer3/" target="_blank">Sobre a Include Engenharia</a>
       </li>
     </ul>
     <div id="social-links">
